src/objects/AcctSeed__Accounting_Settings__c.object
<CustomObject>
    <description>Main record used to define configuration and default settings used in the application.</description>
    <fields>
        <fullName>AcctSeed__AP_Control_GL_Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>This should be set to the main Payable GL Account.</inlineHelpText>
        <label>AP Control GL Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AcctSeed__GL_Account__c.AcctSeed__Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__GL_Account__c</referenceTo>
        <relationshipLabel>Accounting_Settings (AP Control GL Account)</relationshipLabel>
        <relationshipName>PMA_Main1</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__AR_Control_GL_Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>This should be set to the main Accounts Receivable GL Account.</inlineHelpText>
        <label>AR Control GL Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AcctSeed__GL_Account__c.AcctSeed__Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__GL_Account__c</referenceTo>
        <relationshipLabel>Accounting_Settings (AR Control GL Account)</relationshipLabel>
        <relationshipName>PMA_Main</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Amount_Right_Offset__c</fullName>
        <inlineHelpText>Specifying a value will offset the amount field relative to the current location on the print check pdf. A positive value will move the field left and a negative value will move the field right the number of millimeters specified.</inlineHelpText>
        <label>Amount Right Offset</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Amount_Top_Offset__c</fullName>
        <inlineHelpText>Specifying a value will offset the amount field relative to the current location on the print check pdf. A positive value will move the field down and a negative value will move the field up the number of millimeters specified.</inlineHelpText>
        <label>Amount Top Offest</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Amount_Words_Left_Offset__c</fullName>
        <inlineHelpText>Specifying a value will offset the amount in words field relative to the current location on the print check pdf. A positive value will move the field right and a negative value will move the field left the number of millimeters specified.</inlineHelpText>
        <label>Amount Words Left Offset</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Amount_Words_Top_Offset__c</fullName>
        <inlineHelpText>Specifying a value will offset the amount in words field relative to the current location on the print check pdf. A positive value will move the field down and a negative value will move the field up the number of millimeters specified.</inlineHelpText>
        <label>Amount Words Top Offset</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Archive_Month_Offset__c</fullName>
        <defaultValue>15</defaultValue>
        <description>This should be used as the offset for archiving.</description>
        <inlineHelpText>This should be used as the offset for archiving.</inlineHelpText>
        <label>Archive Month Offset</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Auto_Post_Source_Documents__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Auto-Post Source Documents</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Automated_Job_Results_Retention_Days__c</fullName>
        <defaultValue>30</defaultValue>
        <inlineHelpText>The retention days sets how long Automated Job Result records are kept in the system before being deleted if the Retention Period is enabled. Pre-defined default is set to 30 days. The maximum is 365 days.</inlineHelpText>
        <label>Automated Job Results Retention Days</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Avalara_Account_Id__c</fullName>
        <description>Account ID on your Avalara account’s Settings</description>
        <inlineHelpText>Account ID on your Avalara account’s Settings</inlineHelpText>
        <label>Avalara Account Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Avalara_License_Key__c</fullName>
        <description>License key given by Avalara</description>
        <inlineHelpText>License key given by Avalara</inlineHelpText>
        <label>Avalara License Key</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Avalara_Production_Endpoint__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Avalara Production Endpoint</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Avalara_Sales_Tax_GL_Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>This GL Account should be set up as Type Balance Sheet and Sub Type 1 Liabilities.</description>
        <inlineHelpText>This GL Account should be set up as Type Balance Sheet and Sub Type 1 Liabilities.</inlineHelpText>
        <label>Avalara Sales Tax GL Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AcctSeed__GL_Account__c.AcctSeed__Type__c</field>
                <operation>equals</operation>
                <value>Balance Sheet</value>
            </filterItems>
            <filterItems>
                <field>AcctSeed__GL_Account__c.AcctSeed__Sub_Type_1__c</field>
                <operation>equals</operation>
                <value>Liabilities</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__GL_Account__c</referenceTo>
        <relationshipLabel>Accounting Settings (Avalara Sales Tax GL Account)</relationshipLabel>
        <relationshipName>Accounting_Settings_AvaGLAcct</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Avalara_Tax_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A generic product whose name (example: Avalara Tax) populates the product field on the calculated Avalara tax line. This should be assigned a $0.00 standard price and added to a price book.</description>
        <inlineHelpText>A generic product whose name (example: Avalara Tax) populates the product field on the calculated Avalara tax line. This should be assigned a $0.00 standard price and added to a price book.</inlineHelpText>
        <label>Avalara Tax Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Accounting Settings (Avalara Tax Product)</relationshipLabel>
        <relationshipName>Avalara_Tax_Product_Settings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Billing_Activity_Statement_Format__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Select the billing activity statement format here. The billing activity statement format is the PDF format used to send billing activity statements to a customer.</inlineHelpText>
        <label>Billing Activity Statement Format</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AcctSeed__Billing_Format__c.AcctSeed__Type__c</field>
                <operation>equals</operation>
                <value>Activity Statement</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__Billing_Format__c</referenceTo>
        <relationshipLabel>Accounting Settings (Default Activity Statement Format)</relationshipLabel>
        <relationshipName>Accounting_Settings10</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Billing_Outstanding_Statement_Format__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Select the billing outstanding statement format here. The billing outstanding statement format is the PDF format used to send billing outstanding statements to a customer.</inlineHelpText>
        <label>Billing Outstanding Statement Format</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AcctSeed__Billing_Format__c.AcctSeed__Type__c</field>
                <operation>equals</operation>
                <value>Outstanding Statement</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__Billing_Format__c</referenceTo>
        <relationshipLabel>Accounting Settings (Default Billing Statement Format)</relationshipLabel>
        <relationshipName>Accounting_Settings11</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Cash_In_Default_Matching_Setting__c</fullName>
        <label>Cash-In Default Matching Setting</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Cash_In_Default_Source_Record_Type__c</fullName>
        <label>Cash-In Default Source Record Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cash Receipt</fullName>
                </value>
                <value>
                    <fullName>Journal Entry</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AcctSeed__Cash_Out_Default_Matching_Setting__c</fullName>
        <label>Cash-Out Default Matching Setting</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Cash_Out_Default_Source_Record_Type__c</fullName>
        <label>Cash-Out Default Source Record Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cash Disbursement</fullName>
                </value>
                <value>
                    <fullName>Journal Entry</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AcctSeed__City__c</fullName>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Company_Code__c</fullName>
        <description>Company Code on your Avalara account’s Settings</description>
        <inlineHelpText>Company Code on your Avalara account’s Settings</inlineHelpText>
        <label>Company Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Country_Code__c</fullName>
        <description>2 character ISO abbreviation for Country Code</description>
        <inlineHelpText>2 character ISO abbreviation for Country Code</inlineHelpText>
        <label>Country Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Currency_Gain_Loss_GL_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the GL Account which will need to be set for the realized loss and gain transactions which are created for the cash application and cash disbursement post.</description>
        <inlineHelpText>This is the GL Account which will need to be set for the realized loss and gain transactions which are created for the cash application and cash disbursement post.</inlineHelpText>
        <label>Currency Gain/Loss GL Account</label>
        <referenceTo>AcctSeed__GL_Account__c</referenceTo>
        <relationshipLabel>Accounting Settings (Currency Gain/Loss GL Account)</relationshipLabel>
        <relationshipName>Accounting_Settings157Y</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Current_Year_Earnings_GL_Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Gl Account used when creating current year earnings financial cube records</inlineHelpText>
        <label>Current Year Earnings GL Account</label>
        <referenceTo>AcctSeed__GL_Account__c</referenceTo>
        <relationshipLabel>Accounting_Settings (Current Year Earnings GL Account)</relationshipLabel>
        <relationshipName>Accounting_Settings9</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Customer_Payment_Adjustment_GL_Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Customer Payment Adjustment GL Account</label>
        <referenceTo>AcctSeed__GL_Account__c</referenceTo>
        <relationshipLabel>Accounting_Settings (Default Payment Adjustment GL Account)</relationshipLabel>
        <relationshipName>Accounting_Settings4A9K</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Date_Right_Offset__c</fullName>
        <inlineHelpText>Specifying a value will offset the amount field relative to the current location on the print check pdf. A positive value will move the field left and a negative value will move the field right the number of millimeters specified.</inlineHelpText>
        <label>Date Right Offset</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Date_Top_Offset__c</fullName>
        <inlineHelpText>Specifying a value will offset the date field relative to the current location on the print check pdf. A positive value will move the field down and a negative value will move the field up the number of millimeters specified.</inlineHelpText>
        <label>Date Top Offset</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Default_Bank_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This is the account that the majority of payments are made from and that deposits are made to. When entering a cash receipt it will default to this bank account. When creating a cash disbursement batch it will default to this account.</inlineHelpText>
        <label>Default Bank Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AcctSeed__GL_Account__c.AcctSeed__Bank__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__GL_Account__c</referenceTo>
        <relationshipLabel>Accounting_Settings (Default Bank Account)</relationshipLabel>
        <relationshipName>Accounting_Settings2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Default_Billing_Format__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Select your primary billing format here. When you create a billing and leave this field blank, the default billing format will be selected after you press save.</inlineHelpText>
        <label>Default Billing Format</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AcctSeed__Billing_Format__c.AcctSeed__Type__c</field>
                <operation>equals</operation>
                <value>Billing</value>
            </filterItems>
            <infoMessage>The type on the PDF Format must be Billing</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__Billing_Format__c</referenceTo>
        <relationshipLabel>Accounting_Settings</relationshipLabel>
        <relationshipName>Accounting_Settings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Default_Cash_Disbursement_Category__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Used to categorize Cash Disbursements on the Cash Flow statement.</inlineHelpText>
        <label>Default Cash Disbursement Category</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AcctSeed__GL_Account__c.AcctSeed__Type__c</field>
                <operation>equals</operation>
                <value>Cash Flow</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__GL_Account__c</referenceTo>
        <relationshipLabel>Accounting Settings (Default Cash Disburs. Cash Flow Category)</relationshipLabel>
        <relationshipName>Accounting_Settings_CF_CD</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Default_Cash_Receipt_Category__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Used to categorize Cash Receipts on the Cash Flow statement.</inlineHelpText>
        <label>Default Cash Receipt Category</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AcctSeed__GL_Account__c.AcctSeed__Type__c</field>
                <operation>equals</operation>
                <value>Cash Flow</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__GL_Account__c</referenceTo>
        <relationshipLabel>Accounting Settings (Default Cash Receipt Cash Flow Category)</relationshipLabel>
        <relationshipName>Accounting_Settings_CF_CR</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Default_Journal_Entry_Line_Category__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Used to categorize Journal Entry Lines related to bank accounts on the Cash Flow statement.</inlineHelpText>
        <label>Default Journal Entry Line Category</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AcctSeed__GL_Account__c.AcctSeed__Type__c</field>
                <operation>equals</operation>
                <value>Cash Flow</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__GL_Account__c</referenceTo>
        <relationshipLabel>Accounting Settings (Default JE Line Cash Flow Category)</relationshipLabel>
        <relationshipName>Accounting_Settings_CF_JEL</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Default_Ledger__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>This is the default ledger used to post transaction records</inlineHelpText>
        <label>Default Ledger</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>The ledger type must be Transactional</errorMessage>
            <filterItems>
                <field>AcctSeed__Ledger__c.AcctSeed__Type__c</field>
                <operation>equals</operation>
                <value>Transactional</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__Ledger__c</referenceTo>
        <relationshipLabel>Accounting_Settings</relationshipLabel>
        <relationshipName>Accounting_Settings</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Default_Packing_Slip_Format__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Select your primary packing slip format here. When you create a shipment record and leave this field blank, the default packing slip format will be selected after you press save.</inlineHelpText>
        <label>Default Packing Slip Format</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>The type on the PDF Format must be Packing Slip</errorMessage>
            <filterItems>
                <field>AcctSeed__Billing_Format__c.AcctSeed__Type__c</field>
                <operation>equals</operation>
                <value>Packing Slip</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__Billing_Format__c</referenceTo>
        <relationshipLabel>Accounting Settings (Default Packing Slip)</relationshipLabel>
        <relationshipName>Accounting_Settings2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Default_Project_Task_Labor_GL_Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Default_Project_Task_Labor_GL_Account</description>
        <inlineHelpText>This GL Account is the debit side of the Time Card labor recording.  It will be an expense (debit)</inlineHelpText>
        <label>Default Project Task Labor GL Account</label>
        <referenceTo>AcctSeed__GL_Account__c</referenceTo>
        <relationshipLabel>Accounting_Settings (Default Labor GL Account)</relationshipLabel>
        <relationshipName>Accounting_Settings8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Default_Purchase_Order_Format__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Select your primary purchase order format here. When you create a  purchase order and leave this field blank, the default  purchase order format will be selected after you press save.</inlineHelpText>
        <label>Default Purchase Order Format</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>The type on the PDF Format must be Purchase Order</errorMessage>
            <filterItems>
                <field>AcctSeed__Billing_Format__c.AcctSeed__Type__c</field>
                <operation>equals</operation>
                <value>Purchase Order</value>
            </filterItems>
            <infoMessage>The type on the PDF Format must be Purchase Order</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__Billing_Format__c</referenceTo>
        <relationshipLabel>Accounting Settings (Default Purchase Order Format)</relationshipLabel>
        <relationshipName>Accounting_Settings1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Default_Vendor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Default Vendor on the Bank Direct Connect page.</inlineHelpText>
        <label>Default Vendor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounting Settings</relationshipLabel>
        <relationshipName>Accounting_Settings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Disable_Email_Confirmations__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Disable all e-mails confirmations for automated jobs created by the user. The automated job result will still be created.</inlineHelpText>
        <label>Disable Email Confirmations</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Disable_Trial_Data__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Trial Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Display_Billable_Flag_in_Time_Card_Entry__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>This checkbox will display the billable checkbox on time cards. If enabled, users can select it on individual time card lines to show the line is billable.</inlineHelpText>
        <label>Display Billable Flag in Time Card Entry</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Enable_AP_Period_Sensitive_Aging__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checking this field will enable AP period sensitive aging. Please refer to the Accounting Seed Help documentation for a complete description of this feature.</inlineHelpText>
        <label>Enable AP Period Sensitive Aging</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Enable_Avalara_Tax_Calculation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable Avalara AvaTax integration for tax calculation. This overrides Accounting Seed&apos;s native tax calculation.</description>
        <inlineHelpText>Enable Avalara AvaTax integration for tax calculation. This overrides Accounting Seed&apos;s native tax calculation.</inlineHelpText>
        <label>Enable Avalara Tax Calculation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Enable_Billing_Period_Sensitive_Aging__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checking this field will enable billing period sensitive aging. Please refer to the Accounting Seed Help documentation for a complete description of this feature.</inlineHelpText>
        <label>Enable Billing Period Sensitive Aging</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Enable_Cash_Flow_Statement__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this for the ability to run the Cash Flow Statement report. The default Cash Flow Categories chosen here will auto-populate on records created after the setting is enabled.</inlineHelpText>
        <label>Enable Cash Flow Statement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Enable_Global_Automated_Add__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Global Automated Add</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Enable_Global_Automated_Match__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Global Automated Match</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Enable_Multi_Currency__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Multi-Currency</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Enable_Product_Costing__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box to record the costing of the sale of products.  With this enabled a new billing will record a debit to Cost of Goods and a credit to inventory.</inlineHelpText>
        <label>Enable Product Costing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Enable_Retention_Period__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Enabling the retention period will retain Automated Job Result records for a defined period and will automatically delete them based on the retention days selected. Disabling the retention period will retain Automated Job Result records indefinitely.</inlineHelpText>
        <label>Enable Retention Period</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Financial_Suite_Key__c</fullName>
        <label>Financial Suite Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Inventory_Valuation_Method__c</fullName>
        <inlineHelpText>Denotes whether standard or average cost is used for Product Costing.</inlineHelpText>
        <label>Inventory Valuation Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Average Cost</fullName>
                    <default>true</default>
                    <label>Average Cost</label>
                </value>
                <value>
                    <fullName>Standard Cost</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AcctSeed__Inventory_Variance_GL_Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>This GL Account captures the difference between the standard inventory product cost and the actual purchase price when a payable is created.</inlineHelpText>
        <label>Inventory Variance GL Account</label>
        <referenceTo>AcctSeed__GL_Account__c</referenceTo>
        <relationshipLabel>Accounting_Settings (Inventory Variance GL Account)</relationshipLabel>
        <relationshipName>Accounting_Settings3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Label_for_Time_Card_Variable_1__c</fullName>
        <description>Label used to display for Time Card Variable 1 in the Time Card screen.</description>
        <inlineHelpText>This is the label used to display the Time Card Variable 1 in the Time Card screen.  This is used in coordination with setting up variables in the Accounting Variables tab.</inlineHelpText>
        <label>Label for Time Card Variable 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Label_for_Time_Card_Variable_2__c</fullName>
        <description>Label used to display for Time Card Variable 2 in the Time Card screen.</description>
        <inlineHelpText>This is the label used to display the Time Card Variable 2 in the Time Card screen.  This is used in coordination with setting up variables in the Accounting Variables tab.</inlineHelpText>
        <label>Label for Time Card Variable 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Labor_GL_Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>This liability account (accrued payroll) will be credited when a time card is posted.  The corresponding debit (expense) is from the project task line.</inlineHelpText>
        <label>Labor Clearing GL Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AcctSeed__GL_Account__c.AcctSeed__Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__GL_Account__c</referenceTo>
        <relationshipLabel>Accounting_Settings (Labor GL Account)</relationshipLabel>
        <relationshipName>Accounting_Settings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Ledger_Limit__c</fullName>
        <label>Ledger Limit</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Legacy_Default_Ledger__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Legacy Default Ledger</label>
        <referenceTo>AcctSeed__Ledger__c</referenceTo>
        <relationshipLabel>Accounting Settings (Legacy Default Ledger)</relationshipLabel>
        <relationshipName>Accounting_Settings1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Memo_Left_Offset__c</fullName>
        <inlineHelpText>Specifying a value will offset the memo field relative to the current location on the print check pdf. A positive value will move the field right and a negative value will move the field left the number of millimeters specified.</inlineHelpText>
        <label>Memo Left Offset</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Memo_Top_Offset__c</fullName>
        <inlineHelpText>Specifying a value will offset the memo field relative to the current location on the print check pdf. A positive value will move the field down and a negative value will move the field up the number of millimeters specified.</inlineHelpText>
        <label>Memo Top Offset</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Payee_Address_Left_Offset__c</fullName>
        <inlineHelpText>Specifying a value will offset the payee address field relative to the current location on the print check pdf. A positive value will move the field right and a negative value will move the field left the number of millimeters specified.</inlineHelpText>
        <label>Payee Address Left Offset</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Payee_Address_Top_Offset__c</fullName>
        <inlineHelpText>Specifying a value will offset the payee address field relative to the current location on the print check pdf. A positive value will move the field down and a negative value will move the field up the number of millimeters specified.</inlineHelpText>
        <label>Payee Address Top Offset</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>